# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2010-09-19  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors

2010-09-04  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors

2010-09-03  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors

2010-08-14  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * CAUTION! Parameter values such as *_MEMORY_ABSTRACTION should always be handed over together with MEMORY_ABSTRACTION_COUNT,
            but NOT for array functions, to avoid cyclic calls when evaluating an "ABSTRACTION" constant
            which is currently of type "integer" but might become a "wide_character" again in future

2010-08-13  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes

2010-08-12  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes

2010-08-10  Enrico Gallus  <enrico.gallus@googlemail.com>
        * Extend files constant/model/internet_protocol_model.c and constant/model/service_port_model.c

2010-08-06  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes

2010-06-02  Christian Heller  <christian.heller@tuxtax.de>
        * Correct include paths since some files are in a deeper directory now, after having restructured