@@ -12,7 +12,8 @@
 #
 
 2010-xx-xx  Christian Heller  <christian.heller@tuxtax.de>
-        * Make cyboi fully compilable again
+        * Check for logical errors
+        * Provide basic functions such as "append", "replace" etc. for arrays and other abstractions (types) like "compound"
 
         * Investigate how to handle setting of destination count and size;
             see e.g.: "executor/accessor/setter.c", where both are set;
